--- a/css/style.css
+++ b/css/style.css
@@ -201,6 +201,20 @@ html {
   scroll-behavior: smooth;
   -webkit-tap-highlight-color: transparent;
 }
+body {
+  background-color: var(--background);
+  color: var(--on-background);
+  font-size: var(--fs-body-medium);
+  font-weight: var(--weight-regular);
+  line-height: 20px;
+  letter-spacing: 0.25px;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  padding-block: calc(var(--header-height)+16px) var(--mobile-nav-height);
+  opacity: 0;
+  animation: fade 300ms var(--transition-timing-function) forwards;
+}
 
 /*-----------------------------------*\
   #TYPOGRAPHY
