--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@
   --primary-hover: var(--light-primary-hover);
   --primary-container: var(--light-primary-container);
   --error: var(--light-error);
-  --active-indicator: var(---light-active-indicator);
+  --active-indicator: var(--light-active-indicator);
   --image-background: var(--light-image-background);
   ---badge-btn: var(--light-badge-btn);
   ---on-badge-btn: var(--light-on-badge-btn);
@@ -138,7 +138,7 @@
   --primary-hover: var(--dark-primary-hover);
   --primary-container: var(--dark-primary-container);
   --error: var(--dark-error);
-  --active-indicator: var(---dark-active-indicator);
+  --active-indicator: var(--dark-active-indicator);
   --image-background: var(--dark-image-background);
   ---badge-btn: var(--dark-badge-btn);
   ---on-badge-btn: var(--dark-on-badge-btn);
@@ -238,18 +238,18 @@ main {
   #TYPOGRAPHY
 \*-----------------------------------*/
 
-.diplay_large {
+.display_large {
   font-family: var(--font-primary);
   font-size: var(--fs-display-large);
   font-weight: var(--weight-regular);
   line-height: 32px;
   letter-spacing: -0.25px;
 }
-.diplay_medium {
+.display_medium {
   font-size: var(--fs-display-medium);
   line-height: 36px;
 }
-.diplay_small {
+.display_small {
   font-family: var(--font-primary);
   font-size: var(--weight-regular);
   font-weight: var(--weight-regular);
@@ -445,9 +445,110 @@ main {
 [data-theme="dark"] :where(.logo-light, .theme-switch .dark-icon) {
   display: none;
 }
+
+/*-----------------------------------*\
+  #MOBILE NAV
+\*-----------------------------------*/
+
+.mobile-nav {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  background-color: var(--primary-container);
+  color: var(--on-background-variant);
+  width: 100%;
+  height: var(--mobile-nav-height);
+  padding-block: 12px 16px;
+  box-shadow: var(--shadow-1);
+  z-index: 4;
+}
+.mobile-nav .nav-list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  text-align: center;
+}
+.mobile-nav .item-icon {
+  width: 64px;
+  height: 32px;
+  display: grid;
+  place-items: center;
+  margin-inline: auto;
+  margin-block-end: 4px;
+  border-radius: var(--radius-pill);
+  transition: var(--transition-short);
+}
+.mobile-nav .nav-link:where(:hover, :focus-visible) .item-icon {
+  background-color: var(--alpha-10);
+}
+.mobile-nav .nav-link[aria-current="true"] {
+  color: var(--on-background);
+}
+.mobile-nav .nav-link[aria-current="true"] .item-icon {
+  background-color: var(--active-indicator);
+}
+.mobile-nav .nav-link[aria-current="true"] .material-symbols-outlined {
+  font-variation-settings: "FILL" 1;
+}
+
 /*-----------------------------------*\
   #HERO
 \*-----------------------------------*/
+.hero {
+  padding-inline: 16px;
+}
+.banner-card {
+  background-color: var(--image-background);
+  color: var(--white);
+  background-image: url("../image/hero-banner-small.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 480px;
+  display: grid;
+  place-content: center;
+  grid-template-columns: 1fr;
+  text-align: center;
+  padding-inline: 20px;
+  border-radius: var(--radius-8);
+}
+.hero .search-wrapper {
+  position: relative;
+  color: var(--on-background);
+  width: 100%;
+  max-width: 480px;
+  margin-inline: auto;
+  margin-block: 16px 12px;
+  overflow: hidden;
+  border-radius: var(--radius-4);
+}
+.hero .search-wrapper .leading-icon {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+}
+.search-field {
+  background-color: var(--primary-container);
+  height: 56px;
+  padding-inline: 56px;
+  outline: none;
+}
+.search-submit {
+  background-color: var(--primary);
+  color: var(--white);
+  position: absolute;
+  top: 4px;
+  right: 4px;
+  bottom: 4px;
+  width: 48px;
+  display: grid;
+  place-items: center;
+  border-radius: var(--radius-4);
+  transition: var(--transition-short);
+}
+.search-submit:where(:hover, :focus-visible):not(:active) {
+  background-color: var(--primary-hover);
+}
 
 /*-----------------------------------*\
   #TAB
