--- a/css/style.css
+++ b/css/style.css
@@ -326,17 +326,49 @@ main {
   font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
 }
 
+.section {
+  margin-block-end: var(--section-gap);
+}
+.container {
+  max-width: 1130px;
+  width: 100%;
+  margin-inline: auto;
+  padding-inline: 16px;
+}
+
 /*-----------------------------------*\
   #COMPONENTS
 \*-----------------------------------*/
 
 /**
- * Mobile nav
- */
-
-/**
  * Secondary tab
  */
+.tab-list {
+  display: flex;
+  color: var(--on-background-variant);
+  box-shadow: inset 0 -1px 0 var(--outline);
+  overflow-x: auto;
+  scrollbar-width: none;
+}
+.tab-list::-webkit-scrollbar {
+  display: none;
+}
+
+.tab-btn {
+  padding-inline: 24px;
+  height: 48px;
+  border-block-end: 2px solid transparent;
+  flex: 1 0 80px;
+  transition: var(--transition-short);
+}
+
+.tab-btn:where(:hover, :focus-visible):not(:active) {
+  background-color: var(--alpha-10);
+}
+.tab-btn[aria-selected="true"] {
+  color: var(--on-background);
+  border-color: var(--primary);
+}
 
 /**
  * Card
@@ -553,6 +585,18 @@ main {
 /*-----------------------------------*\
   #TAB
 \*-----------------------------------*/
+.tab .tab-list {
+  background-color: var(--background);
+  position: sticky;
+  top: var(--header-height);
+  margin-inline: -16px;
+  padding-inline: 16px;
+  margin-block: 16px 12px;
+  z-index: 1;
+}
+.tab-panel[hidden] {
+  display: none;
+}
 
 /*-----------------------------------*\
   #RECIPE SLIDER
