add and remove massege

--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@
 
   --background: var(--light-background);
   --on-background: var(--light-on-background);
-  --on-background-varian: var(--light-on-background-varian);
+  --on-background-variant: var(--light-on-background-variant);
   --primary: var(--light-primary);
   --primary-hover: var(--light-primary-hover);
   --primary-container: var(--light-primary-container);
@@ -133,7 +133,7 @@
 
   --background: var(--dark-background);
   --on-background: var(--dark-on-background);
-  --on-background-varian: var(--dark-on-background-varian);
+  --on-background-variant: var(--dark-on-background-variant);
   --primary: var(--dark-primary);
   --primary-hover: var(--dark-primary-hover);
   --primary-container: var(--dark-primary-container);
@@ -356,6 +356,15 @@ main {
 .section-title {
   margin-block-end: 12px;
 }
+.snackbar-container {
+  position: fixed;
+  bottom: calc(var(--mobile-nav-height) + 16px);
+  left: 16px;
+  right: 16px;
+  display: grid;
+  gap: 8px;
+  z-index: 4;
+}
 
 /*-----------------------------------*\
   #COMPONENTS
@@ -574,6 +583,34 @@ main {
 /**
  * Snackbar
  */
+.snackbar {
+  height: 48px;
+  width: 100%;
+  background-color: var(--on-background-variant);
+  color: var(--background);
+  padding-inline: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: var(--radius-4);
+  box-shadow: var(--shadow-1);
+  animation: snackbar 3s var(--transition-timing-function) forwards;
+}
+
+@keyframes snackbar {
+  0% {
+    height: 0;
+    opacity: 0;
+  }
+  10%,
+  95% {
+    height: 48px;
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 
 /*-----------------------------------*\
   #HEADER
