btn-filter.active style

--- a/css/style.css
+++ b/css/style.css
@@ -567,7 +567,14 @@ main {
   place-items: center;
 }
 /*Filter button */
-
+.btn-filter {
+  padding-inline: 12px;
+}
+.btn-filter .wrapper {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
 /**
  * Input
  */
@@ -940,6 +947,128 @@ main {
   visibility: visible;
   transform: translateX(-400px);
   transition: var(--transition-medium);
+}
+.filter-bar .title-wrapper {
+  padding: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 16px;
+}
+
+.filter-bar .title-wrapper .title-medium {
+  margin-inline-end: auto;
+}
+.filter-bar .close-btn {
+  background-color: transparent;
+  margin: -8px;
+}
+.filter-content {
+  flex-grow: 1;
+  overflow-y: auto;
+  overscroll-behavior: contain;
+  scrollbar-width: none;
+  padding-block-end: 16px;
+}
+.filter-content::-webkit-scrollbar {
+  display: none;
+}
+.filter-content .search-wrapper {
+  padding: 12px 24px;
+}
+.accordion-btn {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 16px;
+  width: 100%;
+  padding: 16px 24px;
+  color: var(--on-background-variant);
+}
+.accordion-btn .label-large {
+  margin-inline-end: auto;
+}
+.accordion-content {
+  padding-inline: 24px;
+  display: grid;
+  grid-template-rows: 0fr;
+  transition: grid-template-rows var(--transition-short);
+}
+.accordion-overflow {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 8px;
+  overflow: hidden;
+}
+.accordion-btn[aria-expanded="true"] {
+  background-color: var(--alpha-10);
+}
+.accordion-btn[aria-expanded="true"] .trailing-icon {
+  transform: rotate(180def);
+}
+.accordion-btn[aria-expanded="true"] + .accordion-content {
+  padding-block: 8px 12px;
+  grid-template-rows: 1fr;
+}
+.filter-actions {
+  display: flex;
+  gap: 12px;
+  padding: 24px;
+  border-block-start: 1px solid var(--outline);
+}
+.filter-actions .btn {
+  max-width: 100%;
+  width: 100%;
+}
+.overlay {
+  position: fixed;
+  inset: 0;
+  background-color: var(--overlay-bg);
+  opacity: 0;
+  pointer-events: none;
+  transition: var(--transition-short);
+  z-index: all;
+}
+.overlay.active {
+  opacity: 1;
+  pointer-events: all;
+}
+.recipe-container {
+  padding-block-end: 36px;
+}
+.recipe-container .grid-list {
+  position: relative;
+}
+.recipe-container .title-wrapper {
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-block-end: 16px;
+}
+.btn-filter.active {
+  position: fixed;
+  bottom: calc(var(--mobile-nav-height) + 16px);
+  right: 16px;
+  z-index: 1;
+  box-shadow: var(--shadow-2);
+  border-radius: var(--radius-8);
+  height: 48px;
+  padding-inline: 16px;
+  gap: 12px;
+  transition: none;
+  animation: btn-filter-active 200ms var(--transition-timing-function) forwards;
+}
+@keyframes btn-filter-active {
+  0% {
+    transform: scale(0.5);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
 
 /*-----------------------------------*\
