add overflow menu

--- a/css/style.css
+++ b/css/style.css
@@ -654,7 +654,14 @@ main {
 /**
  * Badge
  */
-
+.badge {
+  background-color: var(--error);
+  color: var(--white);
+  height: 16px;
+  min-width: 16px;
+  padding-inline: 4px;
+  border-radius: var(--radius-pill);
+}
 /**
  * Snackbar
  */
@@ -1069,6 +1076,19 @@ main {
     transform: scale(1);
     opacity: 1;
   }
+}
+.load-more {
+  position: relative;
+  margin-block-start: 8px;
+  align-items: center;
+}
+.info-text {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  font-weight: var(--weight-medium);
+  opacity: 0.7;
 }
 
 /*-----------------------------------*\
