--- a/css/style.css
+++ b/css/style.css
@@ -1035,7 +1035,7 @@ main {
   opacity: 0;
   pointer-events: none;
   transition: var(--transition-short);
-  z-index: all;
+  z-index: 5;
 }
 .overlay.active {
   opacity: 1;
@@ -1094,7 +1094,7 @@ main {
 /*-----------------------------------*\
   #DETAIL PAGE
 \*-----------------------------------*/
-.deatail-banner {
+.detail-banner {
   border-radius: var(--radius-8);
 }
 .detail-content {
@@ -1235,7 +1235,6 @@ main {
   }
   .snackbar-container {
     right: auto;
-    bottom: 32px;
     left: 32px;
     max-width: 360px;
     width: 100%;
@@ -1273,5 +1272,312 @@ main {
   }
   .hero .search-wrapper {
     margin-block: 24px 16px;
+  }
+
+  /*
+  * Tab
+  */
+  .tab .tab-list {
+    margin-inline: 0;
+    padding-inline: 0;
+  }
+
+  .tab .btn-secondary {
+    max-width: max-content;
+    margin-inline: auto;
+  }
+
+  /*
+  * Recipe slide
+  */
+  .slider-item {
+    min-width: 206px;
+  }
+
+  /*
+  * Tag
+  */
+  .tag .section-title {
+    margin-block-end: 12px;
+  }
+
+  /*
+  * Footer
+  */
+  .footer {
+    justify-content: space-between;
+    padding-inline: 32px;
+  }
+
+  /*
+  * Filter bar
+  */
+  .filter-bar {
+    border-radius: var(--radius-8) 0 0 var(--radius-8);
+  }
+
+  /*
+  * Detail page
+  */
+  .detail-banner {
+    max-width: 420px;
+  }
+  .detail-stats .stats-item {
+    padding-block: 20px;
+  }
+}
+
+/*
+*responsive for larger than 768px screen
+*/
+@media (min-width: 768px) {
+  /*
+  * Reused style
+  */
+  :root {
+    /*
+  * Others
+  */
+    --header-height: 72px;
+    --mobile-nav-height: 0px;
+  }
+
+  /*
+  * Rest
+  */
+  body {
+    padding-block-end: 0;
+  }
+
+  /*
+  * Reused style
+  */
+  .snackbar-container {
+    bottom: 32px;
+  }
+
+  /*
+  * Header
+  */
+  .header {
+    padding-inline: 32px;
+  }
+  .navbar,
+  .header .btn-primary,
+  .navbar-list {
+    display: flex;
+  }
+  .navbar {
+    margin-inline-start: auto;
+  }
+  .navbar-link {
+    position: relative;
+    height: var(--header-height);
+    display: grid;
+    grid-template-rows: 1fr min-content;
+    align-items: center;
+    padding-inline: 24px;
+    opacity: 0.9;
+  }
+  .navbar-link.active {
+    opacity: 1;
+  }
+  .navbar-link.active::before {
+    content: "";
+    order: 1;
+    height: 3px;
+    background-color: var(--primary);
+    border-radius: var(--radius-pill) var(--radius-pill) 0 0;
+  }
+
+  /*
+  *Mobile nav
+  */
+
+  .mobile-nav {
+    display: none;
+  }
+
+  /*
+  *Footer
+  */
+  .footer .logo {
+    display: block;
+  }
+}
+
+/*
+*responsive for larger than 992px screen
+*/
+@media (min-width: 992px) {
+  /*
+  *Custom property
+  */
+  :root {
+    /*
+    *Typography
+    */
+
+    /* font size*/
+    --fs-display-large: 5.7rem;
+    --fs-display-medium: 4.5rem;
+    --fs-display-small: 3.6rem;
+
+    /*
+*Other
+*/
+    --header-height: 80px;
+  }
+
+  /*
+  *Typography
+  */
+  .display_large {
+    line-height: 64px;
+  }
+
+  .display_medium {
+    line-height: 52px;
+  }
+  .display_small {
+    line-height: 44px;
+  }
+
+  /*
+  *Header
+  */
+  .header {
+    padding-inline: 40px;
+  }
+  .navbar-link {
+    padding-inline: 40px;
+  }
+
+  /*
+*Hero
+*/
+  .hero .search-wrapper {
+    max-width: 800px;
+  }
+  .banner-card {
+    background-image: url("../image/hero-banner-large.jpg");
+  }
+  .banner-card > .label_medium {
+    font-size: 1.4rem;
+    font-weight: var(--weight-regular);
+    opacity: 0.8;
+  }
+
+  /*
+  *Tab
+  */
+  .tab .tab-list {
+    margin-block-start: 0;
+  }
+  .tab-btn {
+    height: 64px;
+  }
+
+  /*
+  *Recipe slider
+  */
+  .slider-item {
+    min-width: calc(20% - 6.4px);
+  }
+
+  /*
+*Footer
+*/
+  .footer {
+    padding-inline: 40px;
+  }
+
+  /*
+  *Recipe page
+  */
+  .filter-bar,
+  .filter-bar.active {
+    all: unset;
+    position: sticky;
+    top: var(--header-height);
+    margin-block-start: -16px;
+    height: calc(100vh - var(--header-height));
+    max-width: 360px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    border-inline-end: 1px solid var(--outline);
+    overflow: auto;
+  }
+  .filter-bar .title-wrapper {
+    justify-content: flex-start;
+  }
+
+  .filter-bar::-webkit-scrollbar {
+    width: 4px;
+  }
+  .filter-bar::-webkit-scrollbar-thumb {
+    background-color: var(--alpha-20);
+  }
+  .filter-bar .close-btn {
+    display: none;
+  }
+  .filter-content {
+    overflow-y: visible;
+  }
+  .filter-content .search-wrapper {
+    padding-block-start: 0;
+  }
+  .recipe-page {
+    position: relative;
+    display: flex;
+  }
+  .btn-filter,
+  .overlay {
+    display: none;
+  }
+
+  /*
+  *Detail page
+  */
+  .detail-page-main {
+    display: grid;
+    grid-template-columns: 1fr;
+    align-items: center;
+  }
+  .detail-page {
+    display: grid;
+    grid-template-columns: 0.8fr 1fr;
+    align-items: flex-start;
+    gap: 36px;
+  }
+  .detail-banner {
+    position: sticky;
+    top: calc(var(--header-height) + 32px);
+    margin-block-start: 16px;
+    max-width: 100%;
+  }
+  .detail-stats .stats-item {
+    padding-block: 24px;
+    gap: 8px;
+  }
+}
+
+/*
+*responsive for larger than 1400px screen
+*/
+@media (min-width: 1400px) {
+  /*
+*Reused style
+*/
+  .container {
+    max-width: 1280px;
+  }
+
+  /*
+*Recipe slider
+*/
+  .slider-item {
+    min-width: calc(16.66% - 6.66px);
   }
 }
